--- a/.github/workflows/clean-untagged-images.yml
+++ b/.github/workflows/clean-untagged-images.yml
@@ -12,9 +12,11 @@ jobs:
     - name: Delete all containers from repository without tags
       uses: Chizkiyahu/delete-untagged-ghcr-action@v6
       with:
+        package_name: 'borgmatic'
         token: ${{ secrets.GHCR_TOKEN }}
         repository_owner: ${{ github.repository_owner }}
         repository: ${{ github.repository }}
         untagged_only: true
+        except_untagged_multiplatform: true
         owner_type: user # org or user
 
