--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -25,27 +28,11 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GHCR_TOKEN }}
 
-    - name: Build and push container image amd64
+    - name: Build and push container image 
       uses: docker/build-push-action@v6
       with:
         push: true
         tags: ghcr.io/l4r5/borgmatic:latest
-        platforms: linux/amd64
-        dockerfile_path: Dockerfile
-
-    - name: Build and push container image armv7
-      uses: docker/build-push-action@v6
-      with:
-        push: true
-        tags: ghcr.io/l4r5/borgmatic:latest
-        platforms: linux/arm/v7
-        dockerfile_path: Dockerfile
-
-    - name: Build and push container image arm64
-      uses: docker/build-push-action@v6
-      with:
-        push: true
-        tags: ghcr.io/l4r5/borgmatic:latest
-        platforms: linux/arm64/v8
+        platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
         dockerfile_path: Dockerfile
 
